--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
 }
 
 button {
@@ -13,4 +13,3 @@ button {
     -ms-tap-highlight-color: transparent;
     -tap-highlight-color: transparent;
 }
-  
